LPS-80242 - Fix navigation wrap

--- a/modules/apps/frontend-theme/frontend-theme-classic/src/css/components/_navbars.scss
+++ b/modules/apps/frontend-theme/frontend-theme-classic/src/css/components/_navbars.scss
@@ -3,6 +3,10 @@
 	padding-top: 0.907rem;
 }
 
+.navbar-blank {
+	flex-wrap: wrap;
+}
+
 .navbar-classic {
 	background-color: #FFF;
 
